fix: remove overflow from body

--- a/resources/css/acc.css
+++ b/resources/css/acc.css
@@ -20,7 +20,7 @@ body {
     background: -webkit-linear-gradient(164deg, rgba(244,135,243,1) 0%, rgba(76,67,182,1) 100%);
     background: linear-gradient(164deg, rgba(244,135,243,1) 0%, rgba(76,67,182,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f487f3",endColorstr="#4c43b6",GradientType=1);
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 100vh;
 
 }
